--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "axios": "^0.21.1",
+    "boostrap": "2.0.0",
+    "bootstrap": "^4.6.0",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.16.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
