--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jquery": "1.9.1 - 3",
     "popper.js": "^1.16.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
